Game displays on a canvas now instead of using divs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       <h1 class="title">The Game of Life</h1>
     </div>
 
-    <div class="container game"></div>
+    <div class="container game">
+      <canvas></canvas>
+    </div>
 
     <div class="container proceed">
       <button class="button-proceed">Proceed</button>
