--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     </div>
 
     <div class="container game">
-      <canvas></canvas>
+      <canvas class="canvas-add" onmousemove="drawAddBox(event)"></canvas>
+      <canvas class="canvas-cells"></canvas>
     </div>
 
-    <div class="container proceed">
-      <button class="button-proceed">Proceed</button>
+    <div class="container play">
+      <button class="button-play" autofocus>Play</button>
     </div>
 
     <script src="game_of_life.js"></script>
